--- a/aaypl-frontend/index.html
+++ b/aaypl-frontend/index.html
@@ -5,7 +5,8 @@
   <title>AAYPL | All Africa Young Political Leaders</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description" content="AAYPL unites, empowers, and amplifies young political leaders across Africa. Join a movement for African youth leadership, democracy, and policy influence.">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Use UNPKG for Tailwind as it is more reliable for static deployments -->
+  <link href="https://unpkg.com/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
   <link rel="icon" href="assets/aaypl-favicon.png" />
 </head>
