--- a/aaypl-frontend/about.html
+++ b/aaypl-frontend/about.html
@@ -2,155 +2,177 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About | All Africa Young Political Leaders (AAYPL)</title>
+  <title>About | AAYPL</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="About AAYPL: uniting, empowering, and amplifying young political leaders across Africa. Leadership, democracy, and policy influence.">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/icons/fontawesome/css/all.min.css">
-  <link rel="icon" href="assets/aaypl-favicon.png" />
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="assets/style.css">
 </head>
-<body class="bg-white text-black font-sans antialiased">
+<body>
   <!-- Navbar -->
-  <nav class="sticky top-0 z-50 bg-white/95 border-b border-blue-900 shadow-sm" id="navbar">
-    <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
-      <a href="index.html" class="flex items-center gap-2">
-        <img src="assets/aaypl-logo.png" alt="AAYPL Logo" class="h-10 w-10 rounded-full border-2 border-blue-900" />
-        <span class="text-2xl font-extrabold text-blue-900 tracking-wide">AAYPL</span>
+  <nav>
+    <div class="navbar-inner">
+      <a href="index.html" class="brand">
+        <img src="assets/aaypl-logo.png" alt="AAYPL Logo"/>AAYPL
       </a>
-      <div class="hidden md:flex items-center gap-7 text-base font-semibold">
-        <a href="index.html" class="nav-link text-blue-900 hover:text-gold-600">Home</a>
-        <a href="about.html" class="nav-link">About</a>
-        <a href="https://blog.aaypl.org" target="_blank" rel="noopener" class="nav-link">Blog</a>
-        <a href="https://events.aaypl.org" target="_blank" rel="noopener" class="nav-link">Events</a>
-        <a href="contact.html" class="nav-link">Contact</a>
-        <a href="register.html" class="bg-blue-900 text-white px-4 py-2 rounded-full shadow hover:bg-gold-600 hover:text-blue-900 transition">Join Now</a>
-      </div>
-      <button id="mobile-menu-btn" class="md:hidden flex items-center text-3xl text-blue-900">
-        <i class="fas fa-bars"></i>
-      </button>
-    </div>
-    <!-- mobile menu -->
-    <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-blue-900 shadow-lg">
-      <div class="flex flex-col gap-2 py-3 px-6">
-        <a href="index.html" class="nav-link text-blue-900">Home</a>
-        <a href="about.html" class="nav-link">About</a>
-        <a href="https://blog.aaypl.org" target="_blank" rel="noopener" class="nav-link">Blog</a>
-        <a href="https://events.aaypl.org" target="_blank" rel="noopener" class="nav-link">Events</a>
-        <a href="contact.html" class="nav-link">Contact</a>
-        <a href="register.html" class="bg-blue-900 text-white px-4 py-2 rounded-full shadow hover:bg-gold-600 transition w-max">Join Now</a>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="events.html">Events</a>
+        <a href="contact.html">Contact</a>
+        <a href="register.html" class="join-btn">Join Now</a>
       </div>
     </div>
   </nav>
 
-  <section class="bg-gradient-to-r from-blue-900 via-blue-800 to-gold-500 py-16 text-white text-center">
-    <h1 class="text-4xl md:text-5xl font-extrabold mb-4">About AAYPL</h1>
-    <p class="max-w-2xl mx-auto text-lg font-medium">AAYPL is a continental platform that unites, empowers, and amplifies young political leaders across Africa, promoting leadership, democracy, and policy influence.</p>
-  </section>
-
-  <section class="max-w-5xl mx-auto px-4 py-16">
-    <div class="mb-12">
-      <h2 class="text-2xl font-bold text-blue-900 mb-3">Who We Are</h2>
-      <p class="text-lg">All Africa Young Political Leaders (AAYPL) is a pan-African, non-partisan, non-governmental organization devoted to fostering unity, empowerment, and leadership among youth in Africa’s political landscape. By bridging the gaps between different regions, cultures, and political backgrounds, AAYPL creates a platform for collaboration, advocacy, and policy influence.</p>
-    </div>
-
-    <div class="mb-12 grid grid-cols-1 md:grid-cols-2 gap-10">
-      <div>
-        <h3 class="font-semibold text-xl text-gold-600 mb-2">Vision</h3>
-        <p>To become the leading continental force for youth-driven political transformation, democracy, and sustainable development in Africa.</p>
-      </div>
-      <div>
-        <h3 class="font-semibold text-xl text-gold-600 mb-2">Core Values</h3>
-        <ul class="list-disc ml-6 space-y-1">
-          <li>Unity & Collaboration</li>
-          <li>Democracy & Good Governance</li>
-          <li>Inclusivity & Diversity</li>
-          <li>Integrity & Accountability</li>
-          <li>Innovation & Excellence</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="mb-12">
-      <h3 class="font-semibold text-xl text-blue-900 mb-2">Our Goals</h3>
-      <ul class="list-disc ml-6 space-y-1">
-        <li>To increase youth participation in African politics and governance.</li>
-        <li>To empower young leaders with resources, skills, and networks for effective policy engagement.</li>
-        <li>To facilitate dialogue and collaboration across the continent for shared solutions.</li>
-        <li>To champion youth-led innovations, entrepreneurship, and advocacy at all levels.</li>
-        <li>To build bridges between young leaders, policymakers, and institutions for impactful change.</li>
-      </ul>
-    </div>
-
-    <div class="mb-12">
-      <h3 class="font-semibold text-xl text-gold-600 mb-2">What Makes AAYPL Unique?</h3>
-      <ul class="list-disc ml-6 space-y-1">
-        <li>Continental reach and inclusiveness – representing every African country and region.</li>
-        <li>Focus on both political and socio-economic transformation.</li>
-        <li>Vibrant leadership development programs and networking platforms.</li>
-        <li>Advocacy for policies that reflect the aspirations of African youth.</li>
-        <li>Commitment to transparency, excellence, and unity.</li>
-      </ul>
-    </div>
-
-    <div>
-      <h3 class="font-semibold text-xl text-blue-900 mb-2">Leadership Team</h3>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 mt-6">
-        <div class="bg-blue-50 rounded-xl shadow p-5 flex flex-col items-center">
-          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="President" class="h-20 w-20 rounded-full border-2 border-blue-900 mb-3">
-          <h4 class="font-bold text-blue-900">Kwame Adeyemi</h4>
-          <span class="text-gold-600 text-sm font-semibold mb-1">President</span>
-          <span class="text-xs text-gray-700">Ghana</span>
+  <section>
+    <h2 class="section-title">About AAYPL</h2>
+    <div class="mission-content">
+      <div class="mission-main">
+        <p>
+          The All Africa Young Political Leaders (AAYPL) is a leading pan-African organization dedicated to uniting, empowering, and amplifying young political leaders across the continent. Our mission is to foster democratic values, ethical leadership, and policy influence through a strong and diverse community of youth changemakers.
+        </p>
+        <div class="mission-col">
+          <h3>Our Vision</h3>
+          <ul>
+            <li>To be the premier platform for Africa’s emerging political leaders</li>
+            <li>To nurture a new generation of ethical, innovative, and responsible leadership</li>
+            <li>To champion sustainable development, peace, and unity across Africa</li>
+          </ul>
         </div>
-        <div class="bg-blue-50 rounded-xl shadow p-5 flex flex-col items-center">
-          <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Vice President" class="h-20 w-20 rounded-full border-2 border-blue-900 mb-3">
-          <h4 class="font-bold text-blue-900">Chinwe Okafor</h4>
-          <span class="text-gold-600 text-sm font-semibold mb-1">Vice President</span>
-          <span class="text-xs text-gray-700">Nigeria</span>
+        <div class="mission-col yellow">
+          <h3>Core Values</h3>
+          <ul>
+            <li>Integrity and Transparency</li>
+            <li>Inclusiveness and Diversity</li>
+            <li>Innovation and Collaboration</li>
+            <li>Resilience and Accountability</li>
+          </ul>
         </div>
-        <div class="bg-blue-50 rounded-xl shadow p-5 flex flex-col items-center">
-          <img src="https://randomuser.me/api/portraits/men/54.jpg" alt="Secretary General" class="h-20 w-20 rounded-full border-2 border-blue-900 mb-3">
-          <h4 class="font-bold text-blue-900">Jean-Paul N'Guessan</h4>
-          <span class="text-gold-600 text-sm font-semibold mb-1">Secretary General</span>
-          <span class="text-xs text-gray-700">Côte d'Ivoire</span>
+        <div class="mission-col">
+          <h3>What We Do</h3>
+          <ul>
+            <li>Organize summits, conferences, and leadership development programs</li>
+            <li>Facilitate policy dialogues and advocacy campaigns</li>
+            <li>Promote youth participation in democratic processes</li>
+            <li>Support youth-led initiatives and community projects</li>
+            <li>Provide mentorship and networking opportunities</li>
+          </ul>
+        </div>
+        <div class="mission-col yellow">
+          <h3>Our History</h3>
+          <ul>
+            <li>Founded in 2017 by a coalition of passionate young leaders from 12 African countries</li>
+            <li>Now present in over 50 African nations and in the diaspora</li>
+            <li>Recognized by major continental and international organizations</li>
+          </ul>
+        </div>
+        <div class="mission-col">
+          <h3>Strategic Objectives</h3>
+          <ul>
+            <li>Empower youth with the skills and knowledge to lead</li>
+            <li>Advocate for youth-friendly policies at all levels</li>
+            <li>Facilitate cross-cultural exchanges and partnerships</li>
+            <li>Drive innovation in governance and civic engagement</li>
+          </ul>
+        </div>
+      </div>
+      <div class="mission-side">
+        <div class="mission-quote">
+          “Africa’s future lies in the hands of its youth. At AAYPL, we believe in the power of young leaders to rewrite the narrative of our continent.”
+          <span class="author">– AAYPL Founders</span>
+        </div>
+        <div class="mission-quote" style="background:#e7eaf5; border-left-color:#181c32;">
+          “Join us in building an Africa where youth are not just beneficiaries, but drivers of transformation.”
+        </div>
+        <div class="mission-quote" style="background:#fff8d1;">
+          “One youth, one voice, one Africa.”
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-blue-900 text-white py-8 px-4 mt-10">
-    <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-6">
-      <div class="flex items-center gap-3">
-        <img src="assets/aaypl-logo.png" alt="AAYPL Logo" class="h-8 w-8 rounded-full border-2 border-gold-500">
-        <span class="font-extrabold text-lg">AAYPL</span>
+  <section class="stats-section">
+    <div class="stats-row">
+      <div class="stat">
+        <div class="stat-number">50+</div>
+        <div class="stat-label">Countries Represented</div>
       </div>
-      <div class="flex gap-6">
-        <a href="about.html" class="hover:underline">About</a>
-        <a href="https://blog.aaypl.org" target="_blank" rel="noopener" class="hover:underline">Blog</a>
-        <a href="https://events.aaypl.org" target="_blank" rel="noopener" class="hover:underline">Events</a>
-        <a href="register.html" class="hover:underline">Join</a>
-        <a href="contact.html" class="hover:underline">Contact</a>
+      <div class="stat">
+        <div class="stat-number">15K+</div>
+        <div class="stat-label">Registered Members</div>
       </div>
-      <div class="flex gap-4 text-xl">
-        <a href="#" aria-label="Twitter" class="hover:text-gold-500"><i class="fab fa-x-twitter"></i></a>
-        <a href="#" aria-label="Facebook" class="hover:text-gold-500"><i class="fab fa-facebook"></i></a>
-        <a href="#" aria-label="Instagram" class="hover:text-gold-500"><i class="fab fa-instagram"></i></a>
-        <a href="#" aria-label="LinkedIn" class="hover:text-gold-500"><i class="fab fa-linkedin"></i></a>
+      <div class="stat">
+        <div class="stat-number">800+</div>
+        <div class="stat-label">Projects & Events</div>
+      </div>
+      <div class="stat">
+        <div class="stat-number">100+</div>
+        <div class="stat-label">Partner Organizations</div>
       </div>
     </div>
-    <div class="border-t border-gold-500 mt-6 pt-4 text-center text-sm text-gold-400">
-      &copy; 2025 All Africa Young Political Leaders (AAYPL). All Rights Reserved.
+  </section>
+
+  <!-- Timeline Section -->
+  <section>
+    <h2 class="section-title">Our Journey</h2>
+    <div class="mission-content">
+      <div class="mission-main">
+        <div style="margin-bottom:1.5em;">
+          <b>2017:</b> AAYPL is founded by a small group of youth activists in Lagos, Nigeria.<br>
+          <b>2019:</b> First Pan-African Youth Democracy Summit held in Nairobi.<br>
+          <b>2021:</b> Launch of the AAYPL Policy Innovation Lab.<br>
+          <b>2023:</b> Membership reaches 10,000, with representation in every African country.<br>
+          <b>2024:</b> AAYPL wins the Africa Rising Youth Award for Leadership.
+        </div>
+        <div class="mission-col yellow">
+          <h3>Our Impact</h3>
+          <ul>
+            <li>More than 200 youth-led policy proposals adopted at national or local level</li>
+            <li>Hundreds of young leaders elected or appointed to public office</li>
+            <li>Thousands of lives improved through community initiatives</li>
+          </ul>
+        </div>
+      </div>
+      <div class="mission-side">
+        <img src="https://images.unsplash.com/photo-1532635249-59527f07b6ad?auto=format&fit=crop&w=400&q=80" alt="AAYPL Leaders" style="width:100%;border-radius:12px;box-shadow:0 2px 12px #181c3240;">
+      </div>
     </div>
+  </section>
+
+  <section class="cta-section">
+    <h2>Be Part of the Story</h2>
+    <p>We are always looking for passionate volunteers, mentors, and partners. If you share our values and vision, join us today!</p>
+    <a href="register.html" class="cta-btn">Become a Member</a>
+  </section>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo"><img src="assets/aaypl-logo.png" alt="AAYPL Logo"/>AAYPL</div>
+      <div class="footer-links">
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="events.html">Events</a>
+        <a href="register.html">Join</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="footer-social">
+        <a href="#"><span>🐦</span></a>
+        <a href="#"><span>📘</span></a>
+        <a href="#"><span>📸</span></a>
+        <a href="#"><span>🔗</span></a>
+      </div>
+    </div>
+    <div style="margin-top:2em;font-size:0.96rem;color:#ffd700;">&copy; 2025 All Africa Young Political Leaders (AAYPL). All Rights Reserved.</div>
   </footer>
-
-  <a href="https://wa.me/2348000000000" target="_blank" class="fixed bottom-6 right-6 z-50 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg flex items-center justify-center text-3xl">
-    <i class="fab fa-whatsapp"></i>
-    <span class="sr-only">WhatsApp</span>
-  </a>
-  <button id="scrollToTopBtn" class="hidden fixed bottom-24 right-8 z-50 bg-blue-900 text-gold-500 rounded-full p-3 shadow-lg text-2xl hover:bg-blue-800 transition">
-    <i class="fas fa-arrow-up"></i>
-  </button>
-  <script src="assets/main.js"></script>
+  <a href="https://wa.me/2348000000000" target="_blank" class="whatsapp-btn" aria-label="WhatsApp">💬</a>
+  <button id="scrollToTopBtn" title="Back to Top">↑</button>
+  <script>
+    const scrollBtn = document.getElementById('scrollToTopBtn');
+    window.addEventListener('scroll', () => {
+      if(window.scrollY > 300) scrollBtn.style.display = 'block';
+      else scrollBtn.style.display = 'none';
+    });
+    scrollBtn.addEventListener('click', () => window.scrollTo({top:0,behavior:"smooth"}));
+  </script>
 </body>
 </html>
